--- a/portfolio.html
+++ b/portfolio.html
@@ -88,7 +88,13 @@
                 <ul class="list projects">
                     <li class="item">
                         <a href="" class ="projects-links">
-                            <img src="./img/website-techkr.jpg" alt="Открытый ноутбук" width="370">
+                            <div class="thumb-photo">
+                                <img src="./img/website-techkr.jpg" alt="Открытый ноутбук" width="370">
+                                <div class="thumb">
+                                    <p class="text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
                             <div class="projects-text">
                                 <h2 class="title portfolio">Технокряк</h2>
                                 <p class="text portfolio">Веб-сайт</p>
@@ -97,7 +103,14 @@
                     </li>
                     <li class="item">
                         <a href="" class="projects-links">
-                            <img src="./img/design-poster.jpg" alt="Два баскетболиста с мячом" width="370">
+                            <div class="thumb-photo">
+                                <img src="./img/design-poster.jpg" alt="Два баскетболиста с мячом" width="370">
+                                <div class="thumb">
+                                    <p class="text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
+                                        цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
                             <div class="projects-text">
                                 <h2 class="title portfolio">Постер New Orlean vs Golden Star</h2>
                                 <p class="text portfolio">Дизайн</p>
@@ -106,7 +119,14 @@
                     </li>
                     <li class="item">
                         <a href="" class="projects-links">
-                            <img src="./img/application-seafood.jpg" alt="Логотип ресторана" width="370">
+                            <div class="thumb-photo">
+                                <img src="./img/application-seafood.jpg" alt="Логотип ресторана" width="370">
+                                <div class="thumb">
+                                    <p class="text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                                        для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
                             <div class="projects-text">
                                 <h2 class="title portfolio">Ресторан Seafood</h2>
                                 <p class="text portfolio">Приложение</p>
@@ -115,7 +135,14 @@
                     </li>
                     <li class="item">
                         <a href="" class="projects-links">
-                            <img src="./img/marketing-prime.jpg" alt="Наушники" width="370">
+                            <div class="thumb-photo">
+                                <img src="./img/marketing-prime.jpg" alt="Наушники" width="370">
+                            <div class="thumb">
+                                <p class="text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                                    для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            </div>
                             <div class="projects-text">
                                 <h2 class="title portfolio">Проект Prime</h2>
                                 <p class="text portfolio">Маркетинг</p>
@@ -124,7 +151,14 @@
                     </li>
                     <li class="item">
                         <a href="" class="projects-links">
-                            <img src="./img/application-boxes.jpg" alt="Две коробки" width="370">
+                            <div class="thumb-photo">
+                                <img src="./img/application-boxes.jpg" alt="Две коробки" width="370">
+                                <div class="thumb">
+                                    <p class="text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                                        для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
                             <div class="projects-text">
                                 <h2 class="title portfolio">Проект Boxes</h2>
                                 <p class="text portfolio">Приложение</p>
@@ -133,7 +167,14 @@
                     </li>
                     <li class="item">
                         <a href="" class="projects-links">
-                            <img src="./img/website-inspiration.jpg" alt="Экран компьютера" width="370">
+                            <div class="thumb-photo">
+                                <img src="./img/website-inspiration.jpg" alt="Экран компьютера" width="370">
+                                <div class="thumb">
+                                    <p class="text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                                        для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
                             <div class="projects-text">
                                 <h2 class="title portfolio">Inspiration has no Borders</h2>
                                 <p class="text portfolio">Веб-сайт</p>
@@ -142,7 +183,14 @@
                     </li>
                     <li class="item">
                         <a href="" class="projects-links">
-                            <img src="./img/design-book.jpg" alt="Открытая книга" width="370">
+                            <div class="thumb-photo">
+                                <img src="./img/design-book.jpg" alt="Открытая книга" width="370">
+                                <div class="thumb">
+                                    <p class="text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                                        для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
                             <div class="projects-text">
                                 <h2 class="title portfolio">Издание Limited Edition</h2>
                                 <p class="text portfolio">Дизайн</p>
@@ -151,7 +199,14 @@
                     </li>
                     <li class="item">
                         <a href="" class="projects-links">
-                            <img src="./img/marketing-lab.jpg" alt="Бирка с надписью" width="370">
+                            <div class="thumb-photo">
+                                <img src="./img/marketing-lab.jpg" alt="Бирка с надписью" width="370">
+                                <div class="thumb">
+                                    <p class="text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                                        для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
                             <div class="projects-text">
                                 <h2 class="title portfolio">Проект LAB</h2>
                                 <p class="text portfolio">Маркетинг</p>
@@ -160,7 +215,14 @@
                     </li>
                     <li class="item">
                         <a href="" class="projects-links">
-                            <img src="./img/application-business.jpg" alt="Открытый ноутбук" width="370">
+                            <div class="thumb-photo">
+                                <img src="./img/application-business.jpg" alt="Открытый ноутбук" width="370">
+                                <div class="thumb">
+                                    <p class="text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                                        для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
                             <div class="projects-text">
                                 <h2 class="title portfolio">Growing Business</h2>
                                 <p class="text portfolio"> Приложение</p>
